--- a/library.html
+++ b/library.html
@@ -1,1 +1,18 @@
-<!-- write your code here -->
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>Javascript Object</title>
+    <script src="javascript.js"></script>
+</head>
+<body>
+    <p>Skriv in den rea du vill ha på din bok:</p>
+    <form name="myform">
+    <input id="myamount" type="number"/>
+    <input type="button" onclick="rea(); getAmount()"/>
+    </form>
+    <p></p>
+        <table>
+
+        </table>
+</body>
+</html>
